--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -261,12 +261,24 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 
+                                <Border Grid.Row="0" Grid.RowSpan="2" Opacity="0.15">
+                                    <Border.Background>
+                                        <Binding Path="HighlightColor" Converter="{StaticResource HexToBrushConverter}"/>
+                                    </Border.Background>
+                                </Border>
+
                                 <Border x:Name="TitleBar" Grid.Row="0" Background="{StaticResource SecondaryBackground}">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="Auto"/>
                                         </Grid.ColumnDefinitions>
+                                        
+                                        <Border Grid.Column="0" Grid.ColumnSpan="2" Opacity="0.3">
+                                            <Border.Background>
+                                                <Binding Path="HighlightColor" Converter="{StaticResource HexToBrushConverter}"/>
+                                            </Border.Background>
+                                        </Border>
                                         
                                         <TextBlock Grid.Column="0" Text="{Binding Title, RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Foreground="{StaticResource TextBrush}" Margin="8,0"/>
 
@@ -680,14 +692,47 @@
                                 <ControlTemplate x:Key="NormalFieldLayoutTemplate" TargetType="ContentControl">
                                     <Grid Margin="0,4">
                                         <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
                                             <ColumnDefinition Width="Auto" MinWidth="120"/>
                                             <ColumnDefinition Width="*" />
                                         </Grid.ColumnDefinitions>
-                                        <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="0,0,10,0" VerticalAlignment="Top">
-                                            <TextBlock Text="{Binding Name}" ToolTip="{Binding Path}"/>
+                                        
+                                        <Border Grid.Column="0" Width="3" CornerRadius="1.5" HorizontalAlignment="Left">
+                                            <Border.Background>
+                                                <MultiBinding Converter="{StaticResource PriorityColorToBrushConverter}">
+                                                    <Binding Path="HighlightColor"/>
+                                                    <!-- Bind to the ItemsControl's DataContext (the group) instead of an Expander -->
+                                                    <Binding Path="DataContext.HighlightColor" RelativeSource="{RelativeSource AncestorType=ItemsControl}"/>
+                                                </MultiBinding>
+                                            </Border.Background>
+                                        </Border>
+                                        
+                                        <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="10,0,10,0" VerticalAlignment="Top">
+                                            <TextBlock Text="{Binding Name}">
+                                                <TextBlock.ToolTip>
+                                                    <ToolTip>
+                                                        <TextBlock>
+                                                            <Run Text="{Binding NodeTitle, Mode=OneWay, StringFormat='Node: {0}'}" FontWeight="Bold"/>
+                                                            <LineBreak/>
+                                                            <Run Text="{Binding NodeType, Mode=OneWay, StringFormat='Type: {0}'}" Foreground="{StaticResource TextSecondaryBrush}"/>
+                                                            <LineBreak/>
+                                                            <Run Text="{Binding Path, Mode=OneWay, StringFormat='Path: {0}'}"/>
+                                                        </TextBlock>
+                                                    </ToolTip>
+                                                </TextBlock.ToolTip>
+                                            </TextBlock>
+                                            <TextBlock Margin="5,0,0,0" Foreground="{StaticResource TextSecondaryBrush}" VerticalAlignment="Center">
+                                                <TextBlock.Style>
+                                                    <Style TargetType="TextBlock">
+                                                        <Style.Triggers>
+                                                            <DataTrigger Binding="{Binding Type}" Value="Seed"><Setter Property="Text" Value="🎲"/></DataTrigger>
+                                                            <DataTrigger Binding="{Binding Type}" Value="WildcardSupportPrompt"><Setter Property="Text" Value="💡"/></DataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </TextBlock.Style>
+                                            </TextBlock>
                                         </StackPanel>
-                                        <!-- CHANGE: Use DynamicResource to find the selector at the application level -->
-                                        <ContentPresenter Grid.Column="1" Content="{Binding}" ContentTemplateSelector="{DynamicResource FieldTemplateSelector}" VerticalAlignment="Top" />
+                                        <ContentPresenter Grid.Column="2" Content="{Binding}" ContentTemplateSelector="{DynamicResource FieldTemplateSelector}" VerticalAlignment="Top" />
                                     </Grid>
                                 </ControlTemplate>
                                 <ControlTemplate x:Key="InpaintLayoutTemplate" TargetType="ContentControl">
