--- a/Comfizen/Views/SettingsWindow.xaml
+++ b/Comfizen/Views/SettingsWindow.xaml
@@ -165,6 +165,29 @@
                             <StackPanel>
                                 <CheckBox Content="{local:Translate Settings_SaveMetadata}" IsChecked="{Binding SavePromptWithFile}" ToolTip="{local:Translate Settings_SaveMetadataTooltip}"/>
                                 <CheckBox Content="{local:Translate Settings_RemoveBase64OnSave}" IsChecked="{Binding RemoveBase64OnSave}" ToolTip="{local:Translate Settings_RemoveBase64OnSaveTooltip}" Margin="0,5,0,0"/>
+                                
+                                <Border BorderBrush="{StaticResource TertiaryBackground}" BorderThickness="0,1,0,0" Margin="0,10" Padding="0,10,0,0">
+                                    <StackPanel>
+                                        <CheckBox Content="{local:Translate Settings_CompressAnyFieldImages}" 
+                                                  IsChecked="{Binding CompressAnyFieldImagesToJpg}" 
+                                                  ToolTip="{local:Translate Settings_CompressAnyFieldImagesTooltip}"/>
+                                        <StackPanel Orientation="Horizontal" Margin="20,5,0,0">
+                                            <StackPanel.Style>
+                                                <Style TargetType="StackPanel">
+                                                    <Setter Property="IsEnabled" Value="False"/>
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding CompressAnyFieldImagesToJpg}" Value="True">
+                                                            <Setter Property="IsEnabled" Value="True"/>
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </StackPanel.Style>
+                                            <TextBlock Text="{local:Translate Settings_JpgQuality}" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                                            <xctk:IntegerUpDown Value="{Binding AnyFieldJpgCompressionQuality}" Minimum="1" Maximum="100" Width="60"/>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </Border>
+                                
                                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                     <TextBlock Text="{local:Translate Settings_SaveFormat}" VerticalAlignment="Center" Margin="0,0,10,0"/>
                                     <ComboBox ItemsSource="{Binding ImageSaveFormatValues}" SelectedItem="{Binding SaveFormat}" Width="100"/>
